--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
   <section id="shap"> 
     <div class="container"> 
     <div class="row text-align-left">
-      
-        <h6 style="padding-left: 15px;">TYPES D'IMMEUBLE</h6>
-       
+      <div class="col">
+        <h6>TYPES D'IMMEUBLE</h6>
+      </div>
       <div class="w-100"></div>
         <div class="col-sm-12 shape"></div>
     </div>
